<resources>
    <string name="app_name">labFragments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_name_hint">Name</string>
    <string name="fragment_age_hint">Age</string>
    <string name="fragment_wish_hint">Wish</string>
    <string name="fragment_button_save">Save</string>
    <string name="fragment_button_cancel">Cancel</string>
    <string name="activity_button_add">Add</string>
    <string name="activity_button_remove">Remove</string>
</resources>